# Pill

./: .gitignore  ARCHITECTURE.md  FILES_COPIED.md  README.md  README_KOKORO.md  SECURITY.md  SUMMARY.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: KOKORO_IMPLEMENTATION.md  QUICKSTART.md  VOICE_ANALYSIS.md  WAKE_WORD_IMPLEMENTATION.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml  commands.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/services/: context.rs  mod.rs  system.rs
src-tauri/src/services/launcher/: mod.rs  registry.rs  scanner.rs  shell.rs
src/components/CommandPalette/: AppIcon.tsx  CommandPalette.css  CommandPalette.tsx  CommandResults.tsx  CurrencyConverterUI.css  CurrencyConverterUI.tsx  ProcessKillerUI.css  ProcessKillerUI.tsx
src/components/Settings/: APISettings.css  APISettings.tsx  ShortcutRecorder.tsx
src/components/Toaster/: Toaster.css  Toaster.tsx
src/hooks/: useCommandFiltering.ts  useCommandFiltering.tsx  useDictation.ts  useIntentEngine.ts  useKeyboardShortcut.ts  useSTT.ts  useTTS.ts  useVoiceProcessor.ts  useWakeWord.ts
src/services/: CurrencyService.ts  KokoroTTS.ts  WakeWordDetector.ts
src/stores/: useAppStore.ts  useConfigStore.ts  useContextStore.ts  useResourceStore.ts  useToastStore.ts
src/utils/: aiUtils.ts  commandRegistry.ts  iconUtils.ts  intentEngine.ts  pipelineExecutor.ts  voiceUtils.ts  windowManager.ts
(+12 files in other folders)
