[package]
name = "nexus-bar"
version = "0.1.0"
description = "Nexus Bar - Your AI-Powered Command Palette"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nexus_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
window-vibrancy = "0.7.1"
tauri-plugin-shell = "2.3.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-global-shortcut = "2.3.1"
winreg = "0.52"
opener = "0.7"
walkdir = "2.5"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_System_Registry", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Gdi", "Win32_Storage_FileSystem"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
sysinfo = "0.36.1"
base64 = "0.22.1"
chrono = "0.4.43"
tauri-plugin-clipboard-manager = "2.2.0"
